tests/codegen/fail/input_object/enum/derive_incompatible_field_type.rs
use juniper::{GraphQLInputObject, GraphQLObject};

#[derive(GraphQLObject)]
struct ObjectA {
    test: String,
}

#[derive(GraphQLInputObject)]
enum Object {
    Field(ObjectA),
}

fn main() {}
